# wn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  Taskfile.yml  cliff.toml  install.ps1  install.sh  release-plz.toml
.github/: pull_request_template.md  wn.tape
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-plz.yml  release.yml  tour.yml
crates/piola/: CHANGELOG.md  Cargo.toml
crates/piola-cli/: CHANGELOG.md  Cargo.toml
crates/piola/src/ast/: mod.rs
crates/piola/src/interpreter/: error.rs  mod.rs
crates/piola/src/lexer/: mod.rs  token.rs
crates/piola/src/parser/: mod.rs
crates/wn/: Cargo.toml
crates/wn-cli/: Cargo.toml
crates/wn-cli/src/: ast_dot.rs  main.rs  updater.rs
crates/wn-core/: Cargo.toml
crates/wn-core/src/: error.rs
crates/wn-core/src/ast/: mod.rs
crates/wn-core/src/interpreter/: mod.rs
crates/wn-core/src/lexer/: mod.rs  token.rs
crates/wn-core/src/parser/: mod.rs
crates/wn-core/src/parser/snapshots/: wn__parser__tests__ast_snapshot_declaracion_duro.snap  wn__parser__tests__ast_snapshot_declaracion_wea.snap
crates/wn-core/tests/common/: mod.rs
crates/wn-diagnostics/: Cargo.toml
crates/wn-diagnostics/src/: lib.rs
crates/wn-stdlib/: Cargo.toml
crates/wn-stdlib/src/: cadena.rs  lib.rs  lista.rs  stdlib_resolver.rs
crates/wn-vm/: Cargo.toml
crates/wn-vm/benches/: vm_bench.rs
crates/wn-vm/src/: builtins.rs  chunk.rs  compiler.rs  lib.rs  native.rs  opcode.rs  resolver.rs  value.rs  vm.rs
crates/wn-vm/src/snapshots/: wn_vm__chunk__tests__chunk_disassemble_snapshot.snap  wn_vm__compiler__tests__cachai_con_si_no.snap  wn_vm__compiler__tests__cachai_sin_si_no.snap  wn_vm__compiler__tests__compila_closure_con_captura.snap  wn_vm__compiler__tests__compila_pega_simple.snap  wn_vm__compiler__tests__decl_global_simple.snap  wn_vm__compiler__tests__llamada_nativa_general.snap  wn_vm__compiler__tests__locales_en_scope.snap  wn_vm__compiler__tests__lorea_builtin.snap  wn_vm__compiler__tests__mientras_basico.snap  wn_vm__compiler__tests__short_circuit_y.snap
crates/wn-wasm/: Cargo.toml
crates/wn-wasm/src/: lib.rs
crates/wn/src/interpreter/: mod.rs  value.rs
crates/wn/src/lexer/: mod.rs
crates/wn/tests/: interpreter_runtime.rs
docs/: .gitignore  README.md  astro.config.mjs  filosofia.md  package.json  pnpm-lock.yaml  source.config.ts  vite.config.ts  wrangler.jsonc
docs/content/docs/: filosofia.mdx  index.mdx  instalacion.mdx  meta.json  roadmap.mdx
docs/content/docs/lenguaje/: control-flujo.mdx  errores.mdx  funciones.mdx  meta.json  tipos.mdx  variables.mdx
docs/src/components/: mdx.tsx
docs/src/components/docs/: brand.tsx  toc-card.tsx
docs/src/components/landing/: code-window.tsx  content.ts  home-page.tsx  section-heading.tsx  sticker-button.tsx  wn-code-block.tsx
docs/src/content/docs/: filosofia.mdx  index.mdx  instalacion.mdx  roadmap.mdx
docs/src/content/docs/lenguaje/: control-flujo.mdx  errores.mdx  funciones.mdx  tipos.mdx  variables.mdx
docs/src/grammars/: wn.tmLanguage.json
docs/src/lib/: layout.shared.tsx  shared.ts
docs/src/routes/: __root.tsx  index.tsx
docs/src/routes/docs/: $.tsx
docs/src/styles/: app.css
examples/: bench_fib_iter.cl  bench_loop.cl  features.cl  fibonacci.cl
grammars/: wn.tmLanguage.json
scripts/: release.ps1  release.sh
tour/: package.json  pnpm-lock.yaml  svelte.config.js  worker-configuration.d.ts  wrangler.jsonc
tour/src/: app.html  mdsvex.d.ts
tour/src/content/lessons/: manifest.json
tour/src/content/lessons/01-bienvenida/: content.md  initial.cl
tour/src/content/lessons/02-variables/: content.md  initial.cl
tour/src/content/lessons/03-operadores/: content.md  initial.cl
tour/src/content/lessons/04-cachai/: content.md  initial.cl
tour/src/content/lessons/05-pega/: content.md  initial.cl
tour/src/content/lessons/06-bucles/: content.md  initial.cl
tour/src/content/lessons/07-listas-mapas/: content.md  initial.cl
tour/src/content/lessons/08-errores/: content.md  initial.cl
tour/src/lib/components/editor/: Editor.svelte  RunButton.svelte  StdinDrawer.svelte
tour/src/lib/components/layout/: MobileNav.svelte  Shell.svelte  Sidebar.svelte
tour/src/lib/components/lesson/: LessonContent.svelte
tour/src/lib/components/output/: OutputPanel.svelte
tour/src/lib/components/ui/: ThemeToggle.svelte
tour/src/lib/content/: index.ts
tour/src/lib/editor/: wn-mode.ts
tour/src/lib/stores/: lesson.svelte.ts  output.svelte.ts  theme.svelte.ts
tour/src/lib/wasm/: index.ts
tour/src/routes/: +layout.svelte  +page.svelte  layout.css
tour/src/routes/[slug]/: +page.svelte  +page.ts
