[workspace]
resolver = "2"
members = [
    "crates/wn-diagnostics",
    "crates/wn-core",
    "crates/wn-cli",
    "crates/wn-vm",
    "crates/wn-wasm",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
repository = "https://github.com/cuervolu/wn"
license = "MIT"

[workspace.dependencies]
miette    = "7"
thiserror = "2"

id-arena = "2"

clap      = { version = "4", features = ["derive"] }
rustyline = "18"
dialoguer = "0.12"
owo-colors = "4"
self-replace = "1"
self_update = { version = "0.44", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }


insta = { version = "1", features = ["ron"] }
[profile.dev]
opt-level = 0      # no optimization, fast compile
debug = true       # full debug symbols

[profile.release]
opt-level = 3      # full optimization
lto = "thin"       # link-time optimization (faster than "fat", still good)
codegen-units = 1  # single codegen unit — slower compile, better optimization
strip = "symbols"  # remove debug symbols from binary

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
