[package]
name = "wn-cli"
version.workspace = true
edition.workspace = true
description = "CLI and REPL for the WN++ programming language"
repository.workspace = true
license.workspace = true
keywords = ["wn", "language", "interpreter", "cli", "chile"]

[[bin]]
name = "wn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
rustyline = "18"
self_update = { version = "0.44", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
wn = { path = "../wn" }
