[package]
name = "wn-cli"
version.workspace = true
edition.workspace = true
description = "CLI y REPL para el intérprete de lenguaje de programación WN++"
repository.workspace = true
license.workspace = true
keywords = ["wn", "language", "interpreter", "cli", "chile"]

[[bin]]
name = "wn"
path = "src/main.rs"

[dependencies]
clap.workspace        = true
miette.workspace      = true
rustyline.workspace   = true
self_update.workspace = true
wn-core = { path = "../wn-core" }
